@@ -165,6 +165,7 @@ function build_gcc()
 	--disable-interwork            \
 	--without-newlib               \
 	--enable-checking              \
+	--with-headers                 \
 	|| exit 1
 
 
@@ -277,6 +278,30 @@ function build_gdbstub()
     cd ${BASE_DIRECTORY} || exit 1
 }
 
+function build_profile()
+{
+    echo ""
+    echo "BUILDING profiling libraries --------------------------"
+    echo ""
+    echo ""
+
+    mkdir -p ${BUILD_DIR}/profile || exit 1
+    cd ${BUILD_DIR}/profile || exit 1
+
+    PREV_CFLAGS=${CFLAGS}
+    export CFLAGS="-DNO_UNDERSCORES"
+
+    ${BASE_DIRECTORY}/profile/configure  \
+	--host=${TARGET}             \
+	--prefix=${PREFIX}             \
+	|| exit
+
+    export CFLAGS=${PREV_CFLAGS}
+
+    make         || exit 1
+    make install || exit 1
+}
+
 function build_docs()
 {
     echo ""
@@ -293,7 +318,7 @@ function build_docs()
     tar cf - images | (cd ${PREFIX}/share; tar xf -) || exit 1
 }
 
-function buildall()
+function build_all()
 {
     build_binutils
     build_import_libs
@@ -305,9 +330,10 @@ function buildall()
     build_cegccdll
     build_cegccthrddll
     build_libstdcppdll
+    build_profile
+    build_docs
     build_gdb
     build_gdbstub
-    build_docs
 }
 
 case $BUILD_OPT in
@@ -328,7 +354,8 @@ case $BUILD_OPT in
  gdb) build_gdb ;;
  gdbstub) build_gdbstub ;;
  docs) build_docs ;;
- all) buildall ;;
+ profile) build_profile ;;
+ all) build_all ;;
  *) echo "Please enter a valid build option." ;;
 esac
 
