@@ -1,3 +1,9 @@
+2006-12-24  Danny Backx <dannybackx@users.sourceforge.net>
+
+	* build-mingw32ce.sh, build-cegcc.sh (build_profile) : Add.
+	* build-mingw32ce.sh, build-cegcc.sh (build_gcc) : Add --with-headers
+	option so -Dinhibit_libc isn't triggered.
+
 2006-12-19  Pedro Alves  <pedro_alves@portugalmail.pt>
 
 	* build-mingw32ce.sh (build-w32api): New function.
